# wpdiff

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: diff.rs  main.rs  output.rs  plugin.rs  progress.rs  source.rs  upgrade.rs
