[package]
name = "wpdiff"
version = "0.1.0"
edition = "2024"
description = "Diff locally installed WordPress plugins against their upstream versions"
license = "MIT"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# These pedantic lints are too noisy or conflict with readability
too_many_lines = "allow"
struct_excessive_bools = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
cast_possible_truncation = "allow"
case_sensitive_file_extension_comparisons = "allow"

[dependencies]
clap = { version = "4", features = ["derive"] }
similar = { version = "2", features = ["text", "inline", "unicode"] }
colored = "3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
zip = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
walkdir = "2"
anyhow = "1"
regex = "1"
log = "0.4"
env_logger = "0.11"
terminal_size = "0.4"
glob-match = "0.2"
mpatch = "1"
rayon = "1"
indicatif = "0.18"
